[package]
name = "hexgridspiral"
version = "0.1.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "README.assets/*",
]
repository = "https://github.com/lucidBrot/hexgridspiral"
readme = "./README.md"
license = "MIT OR Apache-2.0"
# TODO: author, description, keywords, categories
# crates.io accepts at most 5 keywords
keywords = ["hexgrid", "hexagonal", "grid", "spiral", "tile"]
categories = ["mathematics", "game-development", "data-structures", "science::geo"]
authors = ["Eric Mink" ]
description = "Hexagonal Cube-Coordinate System with Spiralling Integer Tile Identifiers"

[dependencies]
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1"}
# Newtypes type-safety but with operators
# You can specify the types of derives that you need for less time spent
# compiling. For the full list of features see this crate its `Cargo.toml`.
derive_more = { version = "1", features = ["from", "add", "mul", "into", "display", "not"] }
num_enum = {version = "0.7.3"}
# Floating-Point Comparison for Tests.
approx_eq = { version = "0.1" }
